--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,4 +3,4 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.inspira.polivotoserver.MainActivity" />
+    tools:context="org.inspira.polivoto.Activity.MainActivity" />
