--- a/app/src/main/res/menu/votaciones_conf_menu.xml
+++ b/app/src/main/res/menu/votaciones_conf_menu.xml
@@ -33,6 +33,11 @@
         android:orderInCategory="100"
         android:title="@string/volver_global"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/merge_results"
+        android:orderInCategory="100"
+        android:title="@string/merge_results"
+        app:showAsAction="never"/>
     <!--
     <item
         android:id="@+id/cambiar_contraseñas"
